--- a/test/index.html
+++ b/test/index.html
@@ -16,6 +16,9 @@
 <body>
 
 
+<div class="anchor-nav">
+</div>
+
 <section class="section-intro back-img" style="background-image: url('imgs/sample-img-1.jpg')">
     <div class="container">
         <div class="content-wrap">
